<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.bolingcavalry</groupId>
	<artifactId>wallet-service</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<flyway.version>11.1.0</flyway.version>
		<feign-jackson-version>11.8</feign-jackson-version>
		<github.spotbugs.version>4.6.0</github.spotbugs.version>
		<jackson.version>2.15.2</jackson.version>
		<jcip.version>1.0</jcip.version>
		<micrometer-nr.version>0.8.0</micrometer-nr.version>
		<schema.processing.version>0.24.0</schema.processing.version>
		<spotbugs.annotations.version>4.7.3</spotbugs.annotations.version>
		<spring.version>6.1.14</spring.version>
		<spring-boot.version>3.3.7</spring-boot.version>
		<spring-cloud.version>2025.0.0</spring-cloud.version>
        <spring-cloud-starter.version>2025.0.0</spring-cloud-starter.version>
		<spring-cloud-contract.version>2025.0.0</spring-cloud-contract.version>
		<testcontainers.version>1.20.0</testcontainers.version>
		<org.mapstruct.version>1.6.2</org.mapstruct.version>
		<postgresql.version>42.7.4</postgresql.version>
		<sso-client.version>1.0.0.RELEASE</sso-client.version>
		<log4j.version>2.20.0</log4j.version>
		<shedlock.version>5.1.0</shedlock.version>
		<shedlock.provider.version>1.0.0</shedlock.provider.version>
		<lombok.version>1.18.36</lombok.version>
		<aws-sdks3-version>1.12.100</aws-sdks3-version>
		<maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
		<maven-flatter-plugin.version>1.7.1</maven-flatter-plugin.version>
		<spring-boot.maven.plugin.version>3.3.7</spring-boot.maven.plugin.version>
		<site.plugin.version>3.11.0</site.plugin.version>
		<spotbugs.plugin.version>4.7.3.0</spotbugs.plugin.version>
		<surefire.plugin.version>3.5.2</surefire.plugin.version>
		<flyway.maven.plugin.version>11.1.0</flyway.maven.plugin.version>
		<sonar-maven-plugin.version>4.2.0.3299</sonar-maven-plugin.version>
		<sonar-jacoco-plugin.version>1.0.1</sonar-jacoco-plugin.version>
		<jacoco-maven-plugin.version>5.1.0.4751</jacoco-maven-plugin.version>
		<sonar-jacoco-maven.plugin.version>0.8.12</sonar-jacoco-maven.plugin.version>
		<sonar.coverage.exclusions>**/com/bolingcavalry/**</sonar.coverage.exclusions>
	    
	</properties>
	<dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot.version}</version>
			<type>pom</type>
			<scope>import</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-dependencies</artifactId>
			<version>${spring-cloud.version}</version>
			<type>pom</type>
			<scope>import</scope>
		</dependency>
	</dependencies>
	</dependencyManagement>

<dependencies>
<dependency>
<groupId>org.postgresql</groupId>
<artifactId>postgresql</artifactId>
<version>${postgresql.version}</version>
<scope>runtime</scope>
</dependency>

<dependency>
<groupId>org.flywaydb</groupId>
<artifactId>flyway-database-postgresql</artifactId>
<version>${flyway.version}</version>
</dependency>

<dependency>
<groupId>com.github.spotbugs</groupId>
<artifactId>spotbugs-annotations</artifactId>
<version>${spotbugs.annotations.version}</version>
</dependency>

<dependency>
<groupId>net.jcip</groupId>
<artifactId>jcip-annotations</artifactId>
<version>${jcip.version}</version>
</dependency>

<dependency>
<groupId>org.springframework.boot</groupId>
<artifactId>spring-boot-starter-test</artifactId>
<version>${spring-boot.version}</version>
<scope>test</scope>
<exclusions>
<exclusion>
<groupId>net.minidev</groupId>
<artifactId>json-smart</artifactId>
</exclusion>

<exclusion>
<groupId>org.yaml</groupId>
<artifactId>snakeyaml</artifactId>
</exclusion>
<exclusion>
<groupId>ch.qos.logback</groupId>
<artifactId>logback-core</artifactId>
</exclusion>
<exclusion>
<groupId>ch.qos.logback</groupId>
<artifactId>logback-classic</artifactId>
</exclusion>
<exclusion>
<groupId>org.xmlunit</groupId>
<artifactId>xmlunit-core</artifactId>
</exclusion>
</exclusions>
</dependency>

<dependency>
<groupId>net.minidev</groupId>
<artifactId>json-smart</artifactId>
<version>2.4.9</version>
</dependency>

<dependency>
<groupId>ch.qos.logback</groupId>
<artifactId>logback-core</artifactId>
<version>1.5.16</version>
</dependency>

<dependency>
<groupId>ch.qos.logback</groupId>
<artifactId>logback-classic</artifactId>
<version>1.5.16</version>
</dependency>

</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>${maven-flatter-plugin.version}</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals><goal>flatten</goal></goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals><goal>clean</goal></goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg><arg>java.base/java.lang=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring-boot.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${surefire.plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.sonarsource.scanner.maven</groupId>
				<artifactId>sonar-maven-plugin</artifactId>
				<version>${jacoco-maven-plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>${site.plugin.version}</version>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>${sonar-jacoco-maven.plugin.version}</version>
				<executions>
					<execution>
						<id>agent</id>
						<goals><goal>prepare-agent</goal></goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals><goal>report</goal></goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


    <reporting>
		<plugins>
			<plugin>
				<groupId>com.github.spotbugs</groupId>
				<artifactId>spotbugs-maven-plugin</artifactId>
				<version>${spotbugs.plugin.version}</version>
			</plugin>
		</plugins>
	</reporting>

    <modules>
        <module>db-migration</module>
	</modules>
</project>
